--- a/styles/sass/ui/form-controls.scss
+++ b/styles/sass/ui/form-controls.scss
@@ -1,5 +1,5 @@
 @mixin form-control-defaults {
-    padding: .5em;
+    padding: .5em 1em;
     
     font-size: $typecsset-base-font-size;
     
