--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2481,7 +2481,7 @@ a {
         color: #FFF !important; }
 
 input {
-  padding: .5em;
+  padding: .5em 1em;
   font-size: 16px;
   border: 1px solid #333333;
   border-radius: 500px;
@@ -2591,7 +2591,7 @@ input {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   content: "\f078";
-  padding: .5em;
+  padding: .5em 1em;
   font-size: 16px;
   border: 1px solid #333333;
   border-radius: 500px;
@@ -2622,7 +2622,7 @@ input {
   color: #41a5ea; }
 
 .css3-metro-dropdown select {
-  padding: .5em;
+  padding: .5em 1em;
   font-size: 16px;
   border: 1px solid #333333;
   border-radius: 500px;
